# PKScreener

./: .coveragerc  .gitignore  CONTRIBUTING.md  Dockerfile  Dockerfile_base  INSTALLATION.md  LICENSE  PKScreener-Contributors.txt  README.md  cve-fixes.txt  pkscreener.ini  pkscreenercli.spec  pyproject.toml  readthedocs.yaml  requirements-dev.txt  requirements.txt  setup.py
docs/: API_REFERENCE.md  ARCHITECTURE.md  DEVELOPER_GUIDE.md  Disclaimer.txt  HIGH_PERFORMANCE_DATA.md  LICENSE-Others  README.md  RELEASE_PROCESS.md  SCALABLE_ARCHITECTURE.md  SCAN_WORKFLOWS.md  TESTING.md  conf.py  index.rst  requirements.txt  tos.txt
pkscreener/: MainApplication.py  MenuManager.py  PKScreenerMain.py  __init__.py  globals.py  pkscreener.ini  pkscreenerbot.py  pkscreenercli.py  release.md  requirements.txt
results/: EQUITY_L.csv
test/: AssetsManager_comprehensive_test.py  AssetsManager_test.py  BacktestHandler_comprehensive_test.py  BacktestHandler_feature_test.py  BacktestHandler_test.py  BacktestUtils_test.py  Barometer_test.py  BotHandlers_comprehensive_test.py  BotHandlers_feature_test.py  CandlePatterns_test.py  ConfigManager_comprehensive_test.py  Configmanager_test.py  ConsoleMenuUtility_coverage_test.py  ConsoleMenuUtility_test.py  ConsoleUtility_test.py  CoreFunctions_test.py  DataLoader_comprehensive_test.py  DataLoader_test.py  ExecuteOptionHandlers_test.py  Fetcher_comprehensive_test.py  Fetcher_coverage_test.py  Fetcher_test.py  GlobalStore_comprehensive_test.py  GlobalStore_coverage_test.py  GlobalStore_test.py  ImageUtility_test.py  MainLogic_comprehensive_test.py  MarketMonitor_test.py  MarketStatus_coverage_test.py  MarketStatus_test.py  MenuManager_comprehensive_test.py  MenuNavigation_comprehensive_test.py  MenuOptions_coverage_test.py  Menuoptions_test.py  NotificationService_test.py  (+88 more)
(+119 files in other folders)
